* Disabled the expenses and popmail conduit from compiling.
* Made new-style config for the vcal conduit. Made new-style config for the
  todo conduit. Stripped out lots of extra #includes. Stripped out extra
  Q_OBJECT macros. Reduced space in widget some. Fixed void return 0;
  Fixed improper AboutData in todo conduit.
* New-style for abbrowser. Minor == vs = mixup. 

2003-6-29  Adriaan de Groot
* Added some code validation support to plugin.h
* Messed about with popmail's config. What was the firewall stuff for?
  Created new-style configs, didn't complete the load/save code, and
  then sortof gave up because is there really any point to doing this
  conduit without switching to the SMTP ioslave? And using identities
  then?

2003-6-26  Adriaan de Groot
* Removed stupid comment in popmail/Makefile.am

2003-6-25  Adriaan de Groot
* Be consistent about naming the sysinfo conduit "System Information"
  in user-visible strings.
* Remove "conduit" from the name of the Palm DOC conduit, and add a
  new-style config panel to it. Made it resize properly.
* Note that ConduitConfigBase::load() and its overrides should set
  fModified to false.

2003-6-22  Adriaan de Groot
* Turn off NO_CAST_ASCII when doing DEBUG_CERR, because ostream is
  lacking an operator << for QString. (Nicer is probably to add
  such an operator, but hey.)
* Removed uselessly virtual conduitName() function from conduit classes.
  Noone was overriding it anyway.
* The vcal and abbrowser conduits shouldn't be compiled if you're building
  KPilot HEAD on older systems.

2003-6-21  Adriaan de Groot
* Fixed up the layout of the sysinfo conduit.
* Documented ConduitConfigBase::isModified() and made it virtual.
* Fixed up the sysinfo conduit and saving modified entries.
* Moved the --debug argument to all apps individually.

2003-6-20  Adriaan de Groot
* Updated the hardware lists on the website.
* Updated some "What's This?" texts.
* Removed evil static QStrings in kpilotConfigDialog.cc.