@@ -44,6 +44,7 @@ static const char *kpilotconfigdialog_id =
 #include <qtabwidget.h>
 
 #include <kmessagebox.h>
+#include <kcharsets.h>
 
 #include "kpilotConfig.h"
 
@@ -52,57 +53,6 @@ static const char *kpilotconfigdialog_id =
 #include "syncAction.h"
 #include "dbSelectionDialog.h"
 
-// Vaguely copied from the JPilot source
-// list of supported codecs taken from QTextEncoding's doc
-/* I allow entries of the form
-	Description (actual codec name)
-where only the parts in brackets will be used in the QTextCodec. */
-#define ENCODING_COUNT	(42)
-static const char *encodings[ENCODING_COUNT+11] = {
-	I18N_NOOP("Western (ISO8859-1)"),
-	I18N_NOOP("Central European (ISO8859-2)"),
-	I18N_NOOP("Central European (ISO8859-3)"),
-	I18N_NOOP("Baltic (ISO8859-4)"),
-	I18N_NOOP("Cyrillic (ISO8859-5)"),
-	I18N_NOOP("Arabic (ISO8859-6)"),
-	I18N_NOOP("Greek (ISO8859-7)"),
-	I18N_NOOP("Hebrew, visually ordered (ISO8859-8)"),
-	I18N_NOOP("Hebrew, logically ordered (ISO8859-8-i)"),
-	I18N_NOOP("Turkish (ISO8859-9)"),
-	"ISO8859-10",
-	"ISO8859-13",
-	"ISO8859-14",
-	I18N_NOOP("Western Euro (ISO8859-15)"),
-	"Apple Roman",
-	I18N_NOOP("Arabic (CP1256)"),
-	I18N_NOOP("Baltic (CP1257)"),
-	I18N_NOOP("Central European (CP1250)"),
-	I18N_NOOP("Chinese (Big5)"),	// Chinese, hopefully the same as gtkrc.zh_TW.Big5
-	I18N_NOOP("Chinese (Big5-HKSCS)"),
-	I18N_NOOP("Chinese (GB18030)"),
-	I18N_NOOP("Chinese (GB2312)"),
-	I18N_NOOP("Chinese (GBK)"),
-	"CP1258",
-	"CP874",
-	I18N_NOOP("Cyrillic (CP1251)"),
-	I18N_NOOP("Greek (CP1253)"),
-	I18N_NOOP("Hebrew (CP1255)"),
-	"IBM 850",
-	"IBM 866",
-	I18N_NOOP("Japanese (eucJP)"),
-	I18N_NOOP("Japanese (JIS7)"),
-	I18N_NOOP("Japanese (Shift-JIS)"),
-	I18N_NOOP("Korean (eucKR)"),
-	I18N_NOOP("Russian (KOI8-R)"),
-	I18N_NOOP("Tamil (TSCII)"),
-	I18N_NOOP("Thai (TIS-620)"),
-	I18N_NOOP("Turkish (CP1254)"),
-	I18N_NOOP("Ukrainian (KOI8-U)"),
-	I18N_NOOP("Unicode, 8-bit (utf8)"),
-	I18N_NOOP("Unicode (utf16)"),
-	I18N_NOOP("Western (CP1252)")
-};
-
 KPilotConfigDialog::KPilotConfigDialog(QWidget * w, const char *n,
 	bool m) : UIDialog(w, n, m)
 {
@@ -110,10 +60,14 @@ KPilotConfigDialog::KPilotConfigDialog(QWidget * w, const char *n,
 
 	fConfigWidget = new KPilotConfigWidget(widget());
 	// Fill the encodings list
-	for (int i=0; i<ENCODING_COUNT; i++)
 	{
-		fConfigWidget->fPilotEncoding->insertItem(i18n(encodings[i]));
+		QStringList l = KGlobal::charsets()->descriptiveEncodingNames();
+		for ( QStringList::Iterator it = l.begin(); it != l.end(); ++it )
+		{
+			fConfigWidget->fPilotEncoding->insertItem(*it);
+		}
 	}
+
 	fConfigWidget->tabWidget->adjustSize();
 	fConfigWidget->resize(fConfigWidget->tabWidget->size());
 	setTabWidget(fConfigWidget->tabWidget);
@@ -163,6 +117,7 @@ void KPilotConfigDialog::readConfig()
 	fConfigWidget->fStartDaemonAtLogin->setChecked(c.getStartDaemonAtLogin());
 	fConfigWidget->fDockDaemon->setChecked(c.getDockDaemon());
 	fConfigWidget->fKillDaemonOnExit->setChecked(c.getKillDaemonOnExit());
+	fConfigWidget->fQuitAfterSync->setChecked(c.getQuitAfterSync());
 
 	/* Sync tab */
 	int synctype=c.getSyncType();
@@ -233,6 +188,7 @@ void KPilotConfigDialog::readConfig()
 	c.setStartDaemonAtLogin(fConfigWidget->fStartDaemonAtLogin->isChecked());
 	c.setDockDaemon(fConfigWidget->fDockDaemon->isChecked());
 	c.setKillDaemonOnExit(fConfigWidget->fKillDaemonOnExit->isChecked());
+	c.setQuitAfterSync(fConfigWidget->fQuitAfterSync->isChecked());
 
 	/* Sync tab */
 	int syncmode=fConfigWidget->fSyncMode->id(fConfigWidget->fSyncMode->selected());
@@ -314,7 +270,6 @@ void KPilotConfigDialog::slotSelectNoBackupDBs()
 	QStringList deviceDBs(c.readListEntry("DeviceDBs"));
 	QStringList addedDBs(c.readListEntry("AddedDBsNoBackup"));
 
-	int res;
 	KPilotDBSelectionDialog*dlg=new KPilotDBSelectionDialog(selectedDBs, deviceDBs, addedDBs, this, "NoBackupDBs");
 	if (dlg && (dlg->exec()==QDialog::Accepted) )
 	{
